<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">求带</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_school_selected">SchoolSelectedActivity</string>
    <string name="title_activity_campus_selected">CampusSelectedActivity</string>
    <string name="title_activity_dormitory_selected">DormitorySelectedActivity</string>
    <string name="title_activity_register_finished">RegisterFinishedActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_publish">PublishActivity</string>
    <string name="email">邮箱</string>
    <string name="pass">密码</string>
    <string name="login">登录</string>
    <string name="forget_pass">忘记密码?</string>
    <string name="register">注册帐号</string>
    <string name="title_activity_pull">PullActivity</string>
    <string name="supplyGoods">点击“补充”添加未找到的物品或其他</string>
    <string name="supermarket">进入超市进行选择</string>
    <string name="address">选择地址</string>
    <string name="arrivaltime">送到时间</string>
    <string name="title_activity_super_market">SuperMarketActivity</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="inputYourSchool">请填写你所在的学校</string>
    <string name="title_activity_input_user_name">InputUserNameActivity</string>
    <string name="inputYourUsername">请填写你的用户名</string>
    <string name="nextStep">下一步</string>
    <string name="title_activity_campus">CampusActivity</string>
    <string name="title_activity_forgotten_password">ForgottenPasswordActivity</string>
    <string name="input_your_email">请输入你的注册邮箱</string>
    <string name="title_activity_dormitory">DormitoryActivity</string>
    <string name="title_activity_inpute_dormitory_number">InputeDormitoryNumberActivity</string>
    <string name="input_dormitory_number">请输入你宿舍号</string>
    <string name="title_activity_qiudai_info_display">QiudaiInfoDisplayActivity</string>
    <string name="qiudai_info">求带信息</string>
    <string name="ask_for_taking_info">发布求信息</string>
    <string name="switch_on_off">切换</string>
    <string name="title_activity_single_qiudai_info_display">SingleQiudaiInfoDisplayActivity</string>
    <string name="order_receiving">接  单</string>
    <string name="title_activity_goods_selection">GoodsSelectionActivity</string>
    <string name="title_activity_goods_select">GoodsSelectActivity</string>
    <string name="title_activity_purchase">PurchaseActivity</string>
    <string name="shopping_trolley">购物车</string>
    <string name="checkout">结账</string>
    <string name="title_activity_purchase_campus">PurchaseActivity</string>
    <string name="title_activity_purchase_dormibuilding">PurchaseDormiBuilding</string>
    <string name="title_activity_about_us">AboutUsActivity</string>
    <string name="title_activity_records">RecordsActivity</string>

</resources>