<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QiudaiInfoDisplayActivity" >

    <RelativeLayout
        android:id="@+id/layout_title_bar"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="#336699" >

        <ImageButton
            android:id="@+id/img_btn_more"
            android:layout_width="40dp"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:background="@drawable/more" />

        <TextView
            android:id="@+id/txt_qiudai_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/qiudai_info"
            android:textColor="#FFFFFF"
            android:textSize="20dp" >
        </TextView>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_goods_checkout_finish"
        android:layout_width="fill_parent"
        android:layout_height="75dip"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/confirm_btn_background" >

        <Button
            android:id="@+id/btn_goods_checkout"
            android:layout_width="230dp"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_margin="10dp"
            android:layout_weight="3"
            android:background="@drawable/button_ask_for_take"
            android:text="@string/ask_for_taking_info"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btn_switch"
            android:layout_width="100dp"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_ask_for_take"
            android:text="@string/switch_on_off"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <!-- 第三方包用于下来刷新的listView -->

    <com.handmark.pulltorefresh.library.PullToRefreshListView
        android:id="@+id/pull_refresh_listview_goods"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/layout_goods_checkout_finish"
        android:layout_below="@id/layout_title_bar"
        android:cacheColorHint="#00000000"
        android:divider="#19000000"
        android:dividerHeight="4dp"
        android:fadingEdge="none"
        android:fastScrollEnabled="false"
        android:footerDividersEnabled="false"
        android:headerDividersEnabled="false"
        android:smoothScrollbar="true"
        android:visibility="visible" />

    <ImageView
        android:id="@+id/img_refresh"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_above="@id/layout_goods_checkout_finish"
        android:layout_below="@id/layout_title_bar"
        android:layout_centerInParent="true"
        android:src="@drawable/refresh"
        android:visibility="invisible" />

</RelativeLayout>